# LibreVoiceAssistant

./: CMakeLists.txt
